[package]
name = "repo-deleter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true