[package]
name = "repo-deleter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true